--- a/src/assets/theme/theme.css
+++ b/src/assets/theme/theme.css
@@ -29,7 +29,7 @@
   height: 40px;
 }
 .view {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   background: rgb(
     calc(var(--base-one) - 190),
@@ -40,6 +40,7 @@
   align-items: center;
   padding-left: 10px;
   justify-content: space-between;
+  overflow: hidden;
 }
 .f-card {
   background: rgba(var(--base-one), var(--base-two), var(--base-three), 0.2);
